--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
           questions, our support team would be happy to help you.</p>
 
-          <form action="">
-            <input type="email" id="email" type="email" placeholder="email@example.com">
+          <form action="#">
+            <input type="email" id="email" type="email" aria-label="email" name="email" placeholder="email@example.com">
             <button>Get Started for Free</button>
           </form>
       
